# ZPG

./: .gitignore  CMakeLists.txt  kor0289.txt  main.cpp  progress.md  readme.md
camera/: camera.cpp  camera.h
engine/: engine.cpp  engine.h
input_handle/: input_handler.cpp  input_handler.h
object/: material.cpp  material.h  mesh.cpp  mesh.h  renderable_object.cpp  renderable_object.h  transformable_object.cpp  transformable_object.h
object/camera/: camera.cpp  camera.h
object/light/: directional_light.cpp  directional_light.h  light.cpp  light.h  light_wrapper.cpp  light_wrapper.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
object/model/: mesh.cpp  mesh.h  texture.cpp  texture.h
object/skybox/: sky_box.cpp  sky_box.h  sky_dome.cpp  sky_dome.h
object/transform/: bezier.h  bezier_curve.h  rotation.cpp  rotation.h  scale.cpp  scale.h  transform.cpp  transform.h  transform_node.cpp  transform_node.h  translation.cpp  translation.h
render/: scene.cpp  scene.h  window.cpp  window.h
resources/model/backpack/: backpack.mtl
resources/model/gnome/: gnome.mtl
resources/model/header/: pyramid.h  triangle.h
resources/model/hollowknight/: hollowknight.mtl
resources/model/m4a1s/: m4a1s.mtl
resources/model/planet/earth/: earth.mtl
resources/model/planet/jupiter/: jupiter.mtl
resources/model/planet/mars/: mars.mtl
resources/model/planet/mercury/: mercury.mtl
resources/model/planet/moon/: moon.mtl
resources/model/planet/neptune/: neptune.mtl
resources/model/planet/saturn/: saturn.mtl
resources/model/planet/sun/: sun.mtl
resources/model/planet/uranus/: uranus.mtl
resources/model/planet/venus/: venus.mtl
resources/model/rat/: rat.mtl
resources/model/tank/: tank.mtl
resources/model/travelersBackpack/: travelersBackpack.mtl
resources/model/tree/: tree.mtl
resources/models/: plain.h  pyramid.h  sphere.h  square.h  suzi_flat.h  suzi_smooth.h  triangle.h
resources/models/backpack/: backpack.mtl
resources/models/ground/: grass.mtl
resources/models/models_2023/Models/: bushes.h  plain.h
resources/models/pacman/: pacman.mtl
resources/models/rat/: rat.mtl
resources/skybox/hq360/: sky.mtl
shader/: base_shader.cpp  base_shader.h  blinn_shader.cpp  blinn_shader.h  constant_shader.cpp  constant_shader.h  lambert_shader.cpp  lambert_shader.h  observer.cpp  observer.h  phong_shader.cpp  phong_shader.h  shader.cpp  shader.h  shader_handler.cpp  shader_handler.h  shader_wrapper.cpp  shader_wrapper.h
shader/fragment_shader/: bad_phong.frag  blinn.frag  constant.frag  flat.frag  flat_v3.frag  lambert.frag  phong.frag  skybox.frag  skyobject.frag
shader/vertex_shader/: constant.vert  flat.vert  flat_v3.vert  lambert.vert  model.vert  skybox.vert  skyobject.vert
utils/: observer.h  subject.h
